--- a/package.json
+++ b/package.json
@@ -15,34 +15,41 @@
     "@emotion/styled": "^11.14.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@mui/material": "^6.3.0",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
-    "ag-grid-community": "^33.0.3",
-    "ag-grid-react": "^33.0.3",
+    "ag-grid-community": "^33.0.4",
+    "ag-grid-enterprise": "^33.0.4",
+    "ag-grid-react": "^33.0.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.28.0",
     "drizzle-orm": "^0.38.2",
+    "file-saver": "^2.0.5",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
-    "next": "^15.1.2",
+    "next": "^15.1.6",
     "next-themes": "^0.4.4",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-calendar": "^5.1.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
+    "react-excel-renderer": "^1.1.0",
     "react-icons": "^5.4.0",
-    "react-toastify": "^11.0.2",
+    "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
